bluegreen-v1/rollout.yaml
# This example demonstrates a Rollout using the blue-green update strategy, which contains a manual
# gate before promoting the new stack.
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-bluegreen
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollout-bluegreen
  template:
    metadata:
      labels:
        app: rollout-bluegreen
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:purple
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    blueGreen: 
      activeService: rollout-bluegreen-active
      previewService: rollout-bluegreen-preview
      prePromotionAnalysis:
        templates:
        - templateName: isd-analysis-bg-v1
        args:
        - name: baseline-hash
          valueFrom:
            podTemplateHashValue: Stable
        - name: preview-hash
          valueFrom:
            podTemplateHashValue: Latest
      autoPromotionEnabled: false
