bluegreen-v1/ingress_preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-bluegreen-preview
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: blue-green-preview.autopilot.opsmx.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: rollout-bluegreen-preview
            port:
              number: 80
